# Binding-C-API

./: README.md
Brotli/: brotli.dart  pubspec.yaml
Brotli/brotli_library/: brotli.c  brotli.def  brotli.dylib  brotli.h
Clang-dart/: clang.dart  pubspec.yaml
Clang-dart/lib/src/: index.dart
Math_Functions/: gamma.dart  hyperbolic.dart  power.dart  pubspec.yaml  trignometry.dart
http_request/: http.dart  pubspec.yaml
http_request/http_request_library/: CMakeLists.txt  http.c  http.def  http.h
simpleUser/: pubspec.yaml  simple_user.dart
simpleUser/lib/: libsimpleuser.dylib  simple_user.c
